fix: style tweaks fix: heading font too large on mobile fix: auto wrap footer text on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,5 +3,5 @@ body {
 }
 
 ::selection {
-  @apply bg-yellow-100;
+  @apply bg-yellow-200;
 }
