--- a/src/styles/markdown.module.css
+++ b/src/styles/markdown.module.css
@@ -11,27 +11,27 @@
 }
 
 .markdown h1 {
-  @apply text-4xl ;
+  @apply text-3xl md:text-4xl;
 }
 
 .markdown h2 {
-  @apply text-3xl;
+  @apply text-2xl md:text-3xl;
 }
 
 .markdown h3 {
-  @apply text-2xl;
+  @apply text-xl md:text-2xl;
 }
 
 .markdown h4 {
-  @apply text-xl;
+  @apply text-lg md:text-xl;
 }
 
 .markdown h5 {
-  @apply text-lg;
+  @apply text-base md:text-lg;
 }
 
 .markdown h6 {
-  @apply text-base;
+  @apply text-sm md:text-base;
 }
 
 .markdown p {
